--- a/app/views/startup/teste.html.erb.html
+++ b/app/views/startup/teste.html.erb.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Banda com mais CDs
-                    <small>Principal álbum da banda</small>
+                    <small>EITAAAAA</small>
                 </h1>
             </div>
         </div>
