--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :artist do |f| %>
+<%= form_for :artist, url: artists_path do |f| %>
   <p>
     <%= f.label :Artista %><br>
     <%= f.text_field :artistName %>
@@ -14,13 +14,12 @@
     <%= f.text_field :label %>
   </p>
  
-  <p>
+  <!--<p>
     <%= f.label :Ano_de_Criação %><br>
+    <%= select_year Date.today, :start_year => Time.now.year, :end_year => Time.now.year - 95, :field_name => :grad_year, :prefix => :profile %>
 
-    <%= select_year Date.today, :start_year => Time.now.year, :end_year => Time.now.year - 95, :field_name => :grad_year, :prefix => :profile  %>
-
-  </p>
-
+  </p>-->
+  
   <p>
     <%= f.label :Principal_Gênero %><br>
     <%= f.text_field :genre %>
