--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,12 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
+              <%= link_to 'My Blog', controller: 'artists' %>
                 <li><a href='index.html'>Home</a></li>             
-                <li><a href='#'>Adicionar Artista</a></li>
-                <li><a href='#'>Adicionar Disco </a></li>
-                <li><a href='#'>Adicionar Músicas</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href='#'>Add Artist</a></li>
+                <li><a href='#'>Add Album </a></li>
+                <li><a href='#'>Add Songs</a></li>
+                <li><a href="#">About</a></li>
               </ul>
               
 <!--
