--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -15,6 +15,8 @@
       <td><%= artist.created_at %></td>
 
       <td><%= link_to 'Show details', artist_path(artist) %></td>
+      <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
+
     </tr>
   <% end %>
 </table>
