--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,8 @@
                 <li><%= link_to 'Add Artist', new_artist_path %></li>
                 <li><a href='#'>Add Album </a></li>
                 <li><a href='#'>Add Songs</a></li>
+                <li><a href='artists'>List Artists </a></li>
+                <li><a href='#'>List Albums</a></li>
                 <li><a href="#">About</a></li>
               </ul>
     
