--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -16,6 +16,8 @@
 
       <td><%= link_to 'Show details', artist_path(artist) %></td>
       <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
+      <td><%= link_to 'Delete', artist_path(artist), method: :delete, data: {confirm: "Você tem certeza?"} %>
+</td>
 
     </tr>
   <% end %>
