--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,22 +1,25 @@
 
 <h1>Listing bands</h1>
  
-<table>
+<table class="table table-hover ">
+<thead> 
   <tr>
+
     <th>Band name</th>
     <th>Created At</th>
+    <th>Actions</th>
 
 
   </tr>
- 
+ </thead>
   <% @artist.each do |artist| %>
     <tr>
       <td><%= artist.artistName %></td>
       <td><%= artist.created_at %></td>
 
-      <td><%= link_to 'Show details', artist_path(artist) %></td>
-      <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
-      <td><%= link_to 'Delete', artist_path(artist), method: :delete, data: {confirm: "Você tem certeza?"} %>
+      <td><a><%= link_to 'Show details', artist_path(artist), :class => 'btn btn-info'%></a> 
+      <a><%= link_to 'Edit', edit_artist_path(artist), :class => 'btn btn-warning' %></a>
+      <a><%= link_to 'Delete', artist_path(artist), :class => 'btn btn-danger', method: :delete, data: {confirm: "Você tem certeza?"} %></a>
 </td>
 
     </tr>
