--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,18 +1,22 @@
-<%= form_for :artist, url: artists_path do |f| %>
-  <p>
-    <%= f.label :Artista %><br>
-    <%= f.text_field :artistName %>
-  </p>
- 
-  <p>
-    <%= f.label :País %><br>
-    <%= f.text_field :country %>
-  </p>
+<div class="form">
 
-  <p>
-    <%= f.label :Gravadora %><br>
-    <%= f.text_field :label %>
-  </p>
+<%= form_for :artist, url: artists_path do |f| %>
+
+ <div class="form-group">
+    <%= f.label :Artist %><br>
+    <%= f.text_field :artistName, :class => 'form-control' %>
+ </div>
+
+ <div class="form-group">
+    <%= f.label :Country %><br>
+    <%= f.text_field :country, :class => 'form-control' %>
+ </div>
+
+ <div class="form-group">
+    <%= f.label :Label %><br>
+    <%= f.text_field :label, :class => 'form-control' %>
+ </div>
+
  
   <!--<p>
     <%= f.label :Ano_de_Criação %><br>
@@ -20,15 +24,19 @@
 
   </p>-->
   
+<div class="form-group">
+    <%= f.label :Genre %><br>
+    <%= f.text_field :genre, :class => 'form-control' %>
+ </div>
+
   <p>
-    <%= f.label :Principal_Gênero %><br>
-    <%= f.text_field :genre %>
-  </p>
+
+  <%= f.submit :class => "btn btn-success btn-mini" %>
+  <%= link_to 'Back', artists_path, :class => "btn btn-warning btn-mini" %>
 
 
-  <p>
-    <%= f.submit %>
-    <%= link_to 'Back', artists_path %>     
+    
+         
 
   </p>
 
@@ -37,5 +45,5 @@
 
 <% end %>
 
-
+</div>
 
