--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,11 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><%= link_to 'Home', controller: 'artists' %></li>             
+                <li><a href='#'>Home </a></li>
                 <li><%= link_to 'Add Artist', new_artist_path %></li>
                 <li><a href='#'>Add Album </a></li>
                 <li><a href='#'>Add Songs</a></li>
-                <li><a href='artists'>List Artists </a></li>
+                <li><%= link_to 'List Artists', controller: 'artists' %></li>             
                 <li><a href='#'>List Albums</a></li>
                 <li><a href="#">About</a></li>
               </ul>
