--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -2,6 +2,8 @@
 
 <%= form_for :artist, url: artists_path do |f| %>
 
+
+<h1>Adding artists</h1>
  <div class="form-group">
     <%= f.label :Artist %><br>
     <%= f.text_field :artistName, :class => 'form-control' %>
@@ -29,16 +31,8 @@
     <%= f.text_field :genre, :class => 'form-control' %>
  </div>
 
-  <p>
-
-  <%= f.submit :class => "btn btn-success btn-mini" %>
-  <%= link_to 'Back', artists_path, :class => "btn btn-warning btn-mini" %>
-
-
-    
-         
-
-  </p>
+  <p><%= f.submit :class => "btn btn-success btn-mini" %>
+  <%= link_to 'Back', artists_path, :class => "btn btn-warning btn-mini" %></p>
 
 
      
