--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                 <li><a href='#'>Add Album </a></li>
                 <li><a href='#'>Add Songs</a></li>
                 <li><%= link_to 'List Artists', controller: 'artists' %></li>             
-                <li><a href='#'>List Albums</a></li>
+                <li><%= link_to 'List Albums', controller: 'albums' %></li>             
                 <li><a href="#">About</a></li>
               </ul>
     
