Implementation of the albums initial pages and methods

--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -10,7 +10,7 @@
     <th>Created At</th>
     <th>Actions</th>
 
-
+<!--
   </tr>
  </thead>
   <% @artist.each do |album| %>
@@ -25,5 +25,5 @@
 </td>
 
     </tr>
-  <% end %>
+  <% end %>-->  
 </table>
