--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,3 +1,28 @@
+<div class="form">
+
+<%= form_for :album, url: albums_path do |f| %>
 
 
-<p>teste</p>
+<h1>Adding albums</h1>
+
+ <div class="form-group">
+    <%= f.label :Artist %><br>
+    <%= f.text_field :artistName, :class => 'form-control' %>
+ </div>
+
+ <div class="form-group">
+    <%= f.label :Album_Name %><br>
+    <%= f.text_field :albumName, :class => 'form-control' %>
+ </div>
+
+<div class="form-group">
+    <%= f.label :Year_of_release %><br>
+    <%= f.text_field :albumYear, :class => 'form-control' %>
+ </div>
+
+ <p><%= f.submit :class => "btn btn-success btn-mini" %>
+  <%= link_to 'Back', albums_path, :class => "btn btn-warning btn-mini" %></p>
+
+ <% end %>
+
+</div>
