--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
               <ul class="nav navbar-nav">
                 <li><a href='#'>Home </a></li>
                 <li><%= link_to 'Add Artist', new_artist_path %></li>
-                <li><a href='#'>Add Album </a></li>
+                <li><%= link_to 'Add Album', new_album_path %></li>
                 <li><a href='#'>Add Songs</a></li>
                 <li><%= link_to 'List Artists', controller: 'artists' %></li>             
                 <li><%= link_to 'List Albums', controller: 'albums' %></li>             
