Editing the text information on the entire site.

--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -12,6 +12,11 @@
 </p>
  
 <p>
+  <strong>Album: </strong>
+  <%= @album.albumName %>
+</p>
+
+<p>
   <strong>Year of Release: </strong>
   <%= @album.albumYear %>
 </p>
