--- a/app/views/startup/about.html.erb
+++ b/app/views/startup/about.html.erb
@@ -4,7 +4,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Music Library | <small>  a way to manage your music collection</small></h1>
+                <h1 class="page-header">What's the Music Library? | <small>  About the platform</small></h1>
             </div>
         </div>
         <!-- /.row -->
@@ -12,24 +12,23 @@
         <!-- Portfolio Item Row -->
         <div class="row">
 
-            <div class="col-md-8">
-                <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+         <div class="col-md-4">
+                <h3>What's the purpose</h3>
+                <p>The ideia in this project it's to try use my Rails skills earned in my exchange to make a website which have database associations and a good view.</p><br>
+
+                <p>That project it's very simple, but it have a great back-end knowledge behind the pages. You can saw this in that code. My purpose in the next months it's to try to put more information about the artists and their albums, such as reviews and cover images.  </p>
+
             </div>
 
-            <div class="col-md-4">
-                <h3>What's the purpose</h3>
-                <p>We listen a lot of music in our entire life. How we can track these musics? The <b>Music Library</b> solution wants to give to you these answer. Above you can now what you can see here:</p><br>
-                <h3>Platform Details</h3>
-                <ul>
-                    <li>Add your favorite artists</li>
-                    <li>Add the albums of your bands</li>
-                </ul>
+            <div class="col-md-8">
+                <img class="img-responsive" src="http://placehold.it/750x300" alt="">
             </div>
+
 
         </div>
         <!-- /.row -->
 
-        <!-- Related Projects Row -->
+        <!-- Related Projects Row 
         <div class="row">
 
             <div class="col-lg-12">
